--- a/src/styles/Deck.module.css
+++ b/src/styles/Deck.module.css
@@ -16,4 +16,21 @@
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.draw {
+  background-color: #ffdd6e;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
 }
