--- a/src/styles/Game.module.css
+++ b/src/styles/Game.module.css
@@ -1,9 +1,15 @@
 .game {
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .game {
+    margin-top: 60px;
+  }
 }
